objects/Case.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amenities</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                </value>
                <value>
                    <fullName>Courier Services</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Reservation</fullName>
                    <isActive>false</isActive>
                    <label>Reservation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_reason__c</fullName>
        <label>Closed reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No action</fullName>
                </value>
                <value>
                    <fullName>No answer customer</fullName>
                </value>
                <value>
                    <fullName>No Sales</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_after_Case_Closed_Flag__c</fullName>
        <formula>CreatedDate  &lt;  Last_Inbound_Email_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication after Case Closed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Visual__c</fullName>
        <formula>IF(TEXT(Customer_Satisfaction__c) = &quot;Very Happy&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01525000000WinF&quot;, &quot;Very Happy&quot;),

IF(TEXT(Customer_Satisfaction__c) = &quot;Happy&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01525000000WinK&quot;, &quot;Happy&quot;),

IF(TEXT(Customer_Satisfaction__c) = &quot;Neutral&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01525000000WinP&quot;, &quot;Neutral&quot;),

IF(TEXT(Customer_Satisfaction__c) = &quot;Unhappy&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01525000000WinU&quot;, &quot;Unhappy&quot;),

IF(TEXT(Customer_Satisfaction__c) = &quot;Angry&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01525000000WinZ&quot;, &quot;Angry&quot;),NULL)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Satisfaction Visual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
                <value>
                    <fullName>Angry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Contact_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Contact Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Email_Date__c</fullName>
        <label>Last Inbound Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subcategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2. Item Stock Check</fullName>
                </value>
                <value>
                    <fullName>3. Payment</fullName>
                </value>
                <value>
                    <fullName>4. Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>2. Existing Reservation</fullName>
                </value>
                <value>
                    <fullName>2. Return Local - RMA</fullName>
                </value>
                <value>
                    <fullName>3. Return Local - Courier Pickup</fullName>
                </value>
                <value>
                    <fullName>4. Return Local - Item received</fullName>
                </value>
                <value>
                    <fullName>5. Return Local - Item Quality Check</fullName>
                </value>
                <value>
                    <fullName>6. Return Local - Complete</fullName>
                </value>
                <value>
                    <fullName>2. Return International</fullName>
                </value>
                <value>
                    <fullName>3. Return International - Security &amp; Department</fullName>
                </value>
                <value>
                    <fullName>4. Return International - Confirm received</fullName>
                </value>
                <value>
                    <fullName>5. Return International - Item Quality Check</fullName>
                </value>
                <value>
                    <fullName>6. Return International - Complete</fullName>
                </value>
                <value>
                    <fullName>2. Exchange Local - RMA</fullName>
                </value>
                <value>
                    <fullName>3. Exchange Local - Courier Pickup</fullName>
                </value>
                <value>
                    <fullName>4. Exchange Local - Item received</fullName>
                </value>
                <value>
                    <fullName>5. Exchange Local - Item Quality Check</fullName>
                </value>
                <value>
                    <fullName>6. Exchange Local - Item dispatched</fullName>
                </value>
                <value>
                    <fullName>2. Send Exchange Details</fullName>
                </value>
                <value>
                    <fullName>3. Exchange International - Security &amp; Department</fullName>
                </value>
                <value>
                    <fullName>4. Exchange International - Confirm received</fullName>
                </value>
                <value>
                    <fullName>5. Exchange International - Item Quality Check</fullName>
                </value>
                <value>
                    <fullName>6. Exchange International - Item dispatched</fullName>
                </value>
                <value>
                    <fullName>2. Initiate Refund - Ecomm</fullName>
                </value>
                <value>
                    <fullName>3. Refund Confirmation</fullName>
                </value>
                <value>
                    <fullName>2. Confirm Address</fullName>
                </value>
                <value>
                    <fullName>2. Repair</fullName>
                </value>
                <value>
                    <fullName>2. Create Booking</fullName>
                </value>
                <value>
                    <fullName>3. Confirm Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Details</fullName>
                </value>
                <value>
                    <fullName>Concession</fullName>
                </value>
                <value>
                    <fullName>Payment Link</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Wish List</fullName>
                </value>
                <value>
                    <fullName>New Reservation</fullName>
                </value>
                <value>
                    <fullName>Existing Reservation</fullName>
                </value>
                <value>
                    <fullName>Cancel Reservation</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>Return Local</fullName>
                </value>
                <value>
                    <fullName>Return International</fullName>
                </value>
                <value>
                    <fullName>Exchange Local</fullName>
                </value>
                <value>
                    <fullName>Exchange International</fullName>
                </value>
                <value>
                    <fullName>Refund Local</fullName>
                </value>
                <value>
                    <fullName>Refund International</fullName>
                </value>
                <value>
                    <fullName>Address Verification</fullName>
                </value>
                <value>
                    <fullName>E-Gift Card</fullName>
                </value>
                <value>
                    <fullName>General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Gift Wrapping and Gift Card</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>The Cobbler</fullName>
                </value>
                <value>
                    <fullName>Bookings</fullName>
                </value>
                <value>
                    <fullName>International Shipment</fullName>
                </value>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>Shipment Status</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Click &amp; Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Closed_cases_with_communication_flag</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Communication_after_Case_Closed_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Cases with Communication</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Working</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Working</label>
        <queue>Working</queue>
    </listViews>
    <listViews>
        <fullName>Working_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Working</label>
        <queue>Working</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Duplicate_Case</fullName>
        <active>true</active>
        <description>User must enter the parent case if the status is flagged as a duplicate.</description>
        <errorConditionFormula>ISPICKVAL( Closed_reason__c , &quot;Duplicate&quot;)&amp;&amp;
ISBLANK( ParentId)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>Please enter the associated parent case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_fields_before_closing_the_case</fullName>
        <active>true</active>
        <description>Making closed reason, Category and Subcategory Mandatory on closing the case.</description>
        <errorConditionFormula>AND( 
TEXT( Status ) = &quot;Closed&quot;, 
OR(
ISBLANK(TEXT(Closed_reason__c)),
ISBLANK(TEXT(Category__c)),
ISBLANK(TEXT(Subcategory__c))
)
)</errorConditionFormula>
        <errorMessage>Please specify Closed Reason, Category and Subcategory when closing the case.</errorMessage>
    </validationRules>
</CustomObject>